[package]
name = "pyo3-graphster"
version = { workspace = true }
description = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }
license = { workspace = true }
readme = "../../README.md"

[dependencies]
graphster = { workspace = true }
polars = { workspace = true, optional = true }
pyo3-polars = { workspace = true, optional = true }
pyo3 = { workspace = true }
hashbrown = { workspace = true }
rayon = { workspace = true }

[features]
polars = ["dep:polars", "dep:pyo3-polars"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
